--- a/example-regression-2.html
+++ b/example-regression-2.html
@@ -2,7 +2,8 @@
 <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js" type="text/javascript"></script>
 		
-		<script src="https://rawgit.com/chen0040/js-regression/master/build/jsregression.min.js" type="application/javascript"></script>
+		<!--<script src="https://rawgit.com/chen0040/js-regression/master/build/jsregression.min.js" type="application/javascript"></script>-->
+		<script src="./src/jsregression.js" type="application/javascript"></script>
 </head>
 <body>
 
@@ -13,13 +14,13 @@
 		// === training data generated from y = 2.0 + 5.0 * x + 2.0 * x^2 === //
 		var data = [];
 		for(var x = 1.0; x < 100.0; x += 1.0) {
-		  var y = 6.0 + 5.0 * x + 2.0 * x * x + (Math.random()-0.5) * x * 100;
+		  var y = 3006.0 - 5.0 * x - 2.0 * x * x + (Math.random()-0.5) * x * 100;
 		  data.push([x, x * x, y]); // Note that the last column should be y the output
 		}
 
 		// === Create the linear regression === //
 		var regression = new jsregression.LinearRegression({
-		  alpha: 0.00000001, // 
+		  alpha: 0.0000001, // 
 		  iterations: 3000,
 		  lambda: 0.0,
 			trace: false
@@ -38,7 +39,7 @@
   ];
   var items_predicted = [];
 		for(var x = 1.0; x < 100.0; x += 0.5) {
-		  var actual_y = 6.0 + 5.0 * x + 2.0 * x * x  + (Math.random()-0.5) * x * 100;
+		  var actual_y = 3006.0 - 5.0 * x - 2.0 * x * x + (Math.random()-0.5) * x * 100;
 		  var predicted_y = regression.transform([x, x * x]);
 		  items.push({x: x, y: actual_y});
 		  items_predicted.push({x: x, y: predicted_y});
